<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/cancel"
                    android:text="@string/cancel"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/app_name"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/app_name"
                    android:layout_marginEnd="25dp"
                    android:textSize="17sp"
                    android:textColor="#FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </android.support.constraint.ConstraintLayout>
        </Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        android:background="@drawable/border"
        >
        <EditText
            android:id="@+id/number_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#5e5e5e"
            android:hint="@string/phoneNumber"
            tools:ignore="MissingConstraints" />
    </android.support.constraint.ConstraintLayout>
    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:text="@string/verificationCode"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"/>
    <TextView
        android:id="@+id/notificationTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sendButton"
        android:layout_margin="15dp"
        android:text="@string/sms_ru"
        />
</android.support.constraint.ConstraintLayout>