<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.SettingsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:id="@+id/settingsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <Button
                android:id="@+id/appThemeButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/button_borders"
                android:textColor="@android:color/white"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/AppTheme"/>
            <Button
                android:id="@+id/appLanguage"
                app:layout_constraintTop_toBottomOf="@+id/appThemeButton"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/button_borders"
                android:textColor="@android:color/white"
                android:layout_margin="10dp"
                android:text="@string/appSettings"/>
        </android.support.constraint.ConstraintLayout>
        <LinearLayout
            android:id="@+id/themeButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/blueThemeButton"
                    android:background="@drawable/button_borders"
                    android:textColor="@android:color/white"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/blueTheme"/>
                <Button
                    android:id="@+id/greenThemeButton"
                    android:background="@drawable/green_theme_button"
                    android:textColor="@android:color/white"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/greenTheme"/>
            </LinearLayout>
            <Button
                android:id="@+id/exitThemeButton"
                android:background="@drawable/button_borders"
                android:textColor="@android:color/white"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/goBack"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/languageButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <Button
                android:id="@+id/kzLanguageButton"
                android:background="@drawable/button_borders"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/kzLanguage"/>
            <Button
                android:id="@+id/ruLanguageButton"
                android:background="@drawable/button_borders"
                android:textColor="@android:color/white"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/ruLanguage"/>
            <Button
                android:id="@+id/enLanguageButton"
                android:background="@drawable/button_borders"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/enLanguage"/>
            <Button
                android:id="@+id/exitLanguageButton"
                android:background="@drawable/button_borders"
                android:textColor="@android:color/white"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/goBack"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>