<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CreateUserActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/colorPrimary"
        tools:ignore="MissingConstraints">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/cancelUserCreation"
                    android:text="@string/cancel"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/app_name"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/app_name"
                    android:layout_marginEnd="25dp"
                    android:textSize="17sp"
                    android:textColor="#FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </android.support.constraint.ConstraintLayout>
        </Toolbar>
    </android.support.design.widget.AppBarLayout>
    <EditText
        android:hint="Введите имя"
        android:id="@+id/userName_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        />
    <EditText
        android:hint="Придумайте пароль"
        android:id="@+id/userPassword_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/userName_ET"
        />
    <EditText
        android:hint="Введите email"
        android:id="@+id/userStatus_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/userPassword_ET"
        />
    <EditText
        android:hint="Город"
        android:id="@+id/userCity_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/userStatus_ET"
        />
    <EditText
        android:hint="Место учебы"
        android:id="@+id/userUniversity_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/userCity_ET"
        />
    <EditText
        android:hint="Введите статус"
        android:id="@+id/userQuote_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/userUniversity_ET"
        />
    <TextView
        android:id="@+id/verification_code_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verificationCodeTV"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textColor="#123"
        app:layout_constraintTop_toBottomOf="@+id/userQuote_ET"
        android:textSize="20sp"
        />
    <EditText
        android:background="@drawable/border"
        android:id="@+id/verification_code_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/verification_code_TV"
        />
    <Button
        android:id="@+id/createUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/createUserButton"
        app:layout_constraintTop_toBottomOf="@+id/verification_code_ET"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/createUserButton"
        android:text="@string/notifcation"/>
</android.support.constraint.ConstraintLayout>